--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -191,7 +191,18 @@
     " * Flipping a coin $\\Omega = \\{H,T\\}$\n",
     " \n",
     "We are interested in determining the probability of an event, and will denote probability of event $\\epsilon$ as  $\\mathcal{P}(\\epsilon)$.\n",
-    "* For the event of the roll of a single die being even, $\\epsilon = \\{2,4,6\\}$\n",
+    "* For the event of the roll of a single die being even, $\\epsilon = \\{2,4,6\\}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Probability Notation\n",
     "\n",
     "\n",
     "The sum of all probabilities for all possible outcomes is 1. \n",
@@ -201,8 +212,7 @@
     "* For the roll of a die being even, $\\mathcal{P}(\\epsilon)=\\mathcal{P}(2)+\\mathcal{P}(4) + \\mathcal{P}(6)$.\n",
     " \n",
     " \n",
-    " \n",
-    "\n"
+    " "
    ]
   },
   {
@@ -234,7 +244,9 @@
    },
    "source": [
     "## Weather Forecast Aside: \n",
-    "<img src=\"http://i.imgur.com/95yBVp0.png\" width=\"500\" height=\"500\" />\n"
+    "<img src=\"http://i.imgur.com/95yBVp0.png\" width=\"500\" height=\"500\" />\n",
+    "\n",
+    "**<font color='red'>End of lecture on 5/17/2016</font>**\n"
    ]
   },
   {
@@ -363,6 +375,253 @@
     "* P(roll being a 4 given first roll was a 4) = 1/6\n",
     "* P(roll both being a 4 given first roll was a 4) = 1/6\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Probability Example: A return to the coin-flip game\n",
+    "\n",
+    "Returning to the Fermat/Pascal game. Fermat is up 8 to 7 but must leave the game. The are 100 francs a stake, going to the first player to 10 points. How do we divide the pot? \n",
+    "\n",
+    "Lets enumerate all of the possible outcomes of the game. \n",
+    "\n",
+    "First we must determine the maximum number of flips for the game to end. Fermat needs 2 points, and Pascal needs 3. So the longest remaining path for the game is for Fermat to get 1 more point a Pascal to get 3, meaning we are guaranteed a winner after 4 flips. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Probability Example: A return to the coin-flip game\n",
+    "\n",
+    "If we determine the possible outcomes in these 4 flips, then we can assign a winner to each. The probablity of each player winning would then be the number of outcomes they win over the total number of outcomes. \n",
+    "\n",
+    "Having this probability, we can determine the fair split of the stakes. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('H', 'H', 'H', 'H'), ('H', 'H', 'H', 'T'), ('H', 'H', 'T', 'H'), ('H', 'H', 'T', 'T'), ('H', 'T', 'H', 'H'), ('H', 'T', 'H', 'T'), ('H', 'T', 'T', 'H'), ('H', 'T', 'T', 'T'), ('T', 'H', 'H', 'H'), ('T', 'H', 'H', 'T'), ('T', 'H', 'T', 'H'), ('T', 'H', 'T', 'T'), ('T', 'T', 'H', 'H'), ('T', 'T', 'H', 'T'), ('T', 'T', 'T', 'H'), ('T', 'T', 'T', 'T')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import itertools as it\n",
+    "combinations = it.product('HT',repeat = 4)\n",
+    "print list(combinations)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Coin Game Possible Outcomes.\n",
+    "Fermat wins in bold. \n",
+    "\n",
+    "[**('H', 'H', 'H', 'H')**, **('H', 'H', 'H', 'T')**, **('H', 'H', 'T', 'H')**, **('H', 'H', 'T', 'T')**, **('H', 'T', 'H', 'H')**, **('H', 'T', 'H', 'T')**, **('H', 'T', 'T', 'H')**, ('H', 'T', 'T', 'T'), **('T', 'H', 'H', 'H')**, **('T', 'H', 'H', 'T')**, **('T', 'H', 'T', 'H')**, ('T', 'H', 'T', 'T'), **('T', 'T', 'H', 'H')**, ('T', 'T', 'H', 'T'), ('T', 'T', 'T', 'H'), ('T', 'T', 'T', 'T')]\n",
+    "\n",
+    "Fermat can win 11 of the 16 possible remaining combinations. Pascal can win 5. \n",
+    "So the money should be split 68 to 31 (change goes to the waitstaff). \n",
+    "\n",
+    "Is this right?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Coin Game Actual Possible Outcomes\n",
+    "\n",
+    "Lets look at the very first possible outcome in our list. \n",
+    " * ('H', 'H', 'H', 'H')\n",
+    " \n",
+    "Four heads come up so Fermat wins. \n",
+    "\n",
+    "But Fermat only needed 2 more heads to win. Why would they flip two extra times? \n",
+    "\n",
+    "All possibilities where Fermat wins the first flips collapse into one possibility; the probabilities change. Lets cull our possibilities list down to remove all of these 'duplicate' games. Once again, Fermat wins in **bold**. \n",
+    "\n",
+    "[**('H', 'H')**, **('H', 'T', 'H')**, **('H', 'T', 'T', 'H')**, ('H', 'T', 'T', 'T'), **('T', 'H', 'H')**, **('T', 'H', 'T', 'H')**, ('T', 'H', 'T', 'T'), **('T', 'T', 'H', 'H')**, ('T', 'T', 'H', 'T'), ('T', 'T', 'T')]\n",
+    "\n",
+    "Fermat wins 6/10, Pascal 4/10. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Random Numbers \n",
+    "\n",
+    "#### Physical Random number generators:\n",
+    "* Atmospheric noise\n",
+    "* Lava lamps\n",
+    "* Geiger counters\n",
+    "* Bubble chambers\n",
+    "* Devices that combine multiple independent events. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "<img src=\"http://i.imgur.com/If7Jb1P.png\" width=\"600\" height=\"200\" />\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Von Neumann and Random Numbers \n",
+    "Invented Monte-Carlo methods while working on 'The Bomb'. Well known for lots of things. \n",
+    "\n",
+    "Proposed one of the first random number generators: \n",
+    " * If you want an 8 digit random number, start with an 8 digit seed, $X_0$, and then calculate $X_0^2$. Your first random number, $X_1$, is taken to be the middle 8 digits of $X_0^2$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10018610"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def vonNeumannRand (seed):\n",
+    "    seedsqd = seed ** 2\n",
+    "    strseedsqd = str(seedsqd)\n",
+    "    midpos = len(strseedsqd)/2\n",
+    "    strrandnum = strseedsqd[midpos-4:midpos+4]\n",
+    "    randnum = int(strrandnum)\n",
+    "    return randnum\n",
+    "    \n",
+    "\n",
+    "seed = 86753099\n",
+    "vonNeumannRand(seed)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## 100 Pairs of Random Numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x7f6c0b8>]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXkAAAETCAYAAADTbHYBAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAF41JREFUeJzt3W2sZVddx/HvvxQwPAebGC20ykNBiYU0WhtD5EKJTH1h\nCSGB1qA2iI1a9Y0KJpK5JCSkiYYGK5QxtahoplFMKCpYAnNrECpjpFZxBlugpZ021WI1SCQp9e+L\nc6ZzONx7z77n7Ie19v5+kpu5594956yzztq/vfZaa+8bmYkkaZzOGroAkqTuGPKSNGKGvCSNmCEv\nSSNmyEvSiBnykjRivYd8RNwYEQ9FxJ0Ntn1uRHwyIv4xIu6IiMv6KKMkjcUQPfmbgNc03Pa3gJsz\n8yLgCuC9nZVKkkao95DPzE8Bjyz+LCKeFxEfjYjjEXFbRFww/9X/Ac+Yf/8s4FSPRZWk6p09dAHm\njgBXZ+YXI+Ji4H3ApcA7gFsj4leApwCvHrCMklSdwUM+Ip4K/CjwZxER8x8/cf7vFcBNmfnuiLgE\n+CDwkgGKKUlVGjzkmQ0ZPTIfd1/2Zubj95l5e0R8R0Sck5kP91pCSarUyjH5JqthIuI9EXHXfAXM\nyxq8bsy/yMyvAV+OiNcvPN+F82/vZT5EExHfDzzZgJek5ppMvO67Gma+rPH5mflC4Grghv2eLCL+\nFPg0cEFEfCUirgJ+Cnjz/CDxL8BPzjf/NeAtEXEH8CfAzzQoryRpLprcajgizgc+kpkX7vK7G4Bj\nmXnz/PEJYCszH2q7sJKkg2ljCeW5wH0Lj0/NfyZJGpi3NZCkEWtjdc0p4LkLj5/DHhctRYR/hkqS\n1pCZsXqrb9e0J//4aphd3AL8NMB8Lft/7Tcen5l+ZXL48OHNn+fYMfLw4dkXnPn+2LHB31/vdVHL\n14r3Oqm6WPE1mbposL9uYmVPfr4aZgv4zoj4CnAYeNIsr/NIZv51RPxERNwNfB24aqMSqbmtrdnX\nadvbAxVE+9rZmX0BvOMdZ36+/PlpmnZ2Om0HK0M+M69ssM017RRHK3XcINQBD8YaUAlXvE7S1rpB\nvVfIVxz8a9fFXlYdCAs+ULZeFxUbdV30eHZnyA+k9QZc8Q7RecivetynFa876mA7oFHXRY9nd4Z8\nDRzT3UxJPfdSyqHJMORr4JjuavsdCFf93uDVkDpuf4Z8Sb08rW85rLe2zgT7bqHvgVKlMOQ7VlvI\n11TWIe139nO6R9+W2tqQJsXbGtTGMFltVR11MdErFWqaPXnHZ8dt+TNc9VgasWmGvBOZ09JFqNtR\nUCWmGfLSpuwoqBKOydvrkjRihrwhX77SJzZtQyqYIa/yGfLS2gx5SRoxJ15VJlevSK0w5FUmV69I\nrXC4RupS6fMJGj1DXuWreXjGkNfADHmVr+aQlwbmmHwXvCvhtLUxaWwbUksM+YNouuO5g05bG5PG\ntiG1xOGag3B8VVJl7Mm3xXXd2s1BPnvbkDowrZBf5xS46Y63ySm6p+bjdZDP1WsD1AFDfpU+djxD\nXvuxfWgDjsl3wR1Sm1psQ84FaQPj78m3Oc7ZdPumK3Acf9VebANqyfhDvs3hljZ3PMdftR87AWrJ\n+ENeqpGdALVkWmPypfaASi2XpOpFZvb3YhHZ5+tJo+DqmsmLCDIz1vq/hrwklW2TkJ/WcI0kTYwh\nL9XOdfTahyEvlaxJgBvy2ochL3VtkxA2wLWhRuvkI+IQcB2zg8KNmXnt0u+fAXwQOA94AvA7mfmB\ndosqVaqL1TFeLKWGVoZ8RJwFXA9cCjwAHI+ID2fmyYXNfgn4fGb+ZEScA3whIj6Ymd/spNTSmDUJ\ncC+WKkMFy1ub9OQvBu7KzHsBIuIocDmwGPIJPH3+/dOBrxrwmrRNetoGeD1GEvLnAvctPL6fWfAv\nuh64JSIeAJ4GvKGd4i2ooDKlx/UZ1O4X2kdb9655DfC5zHxVRDwf+HhEXJiZ/7O84fZCY9/a2mLL\nP2ws7a1Jm3e/6FcP8yE7OzvstDTpvvKK14i4BNjOzEPzx28DcnHyNSL+EnhXZv7d/PEngLdm5j8s\nPdf6V7xub3vaqjrZQRmvnnJpkytem/TkjwMviIjzgQeBNwJXLG1zL/Bq4O8i4ruAC4AvrVOgb+EK\nAo2BbVUDWhnymflYRFwD3MqZJZQnIuLq2a/zCPBO4AMRcef8v/1GZv7nxqVzAkpSySo4gDcak8/M\njwEvWvrZ+xe+f5DZuLykKZn6UFQF772eK14rqExpcrwit3iGvCSNWD1//m/qp4Xqj21tfy6IqIoh\nLy2zre3PBRFVqWe4RlIzjpNrQdk9eU8L1ZcxtbU+z0Rqq5sJKjvkPS1UX2xr6zHki1d2yEtqZkxn\nImpVPSFvQ1VfamxrnoloD/VMvNa446lOtjWNSD0hL6kZD1JaYMhLbSph+aIhrwWGvNSmEkJeWlB/\nyLtTSdKe6lldsxcvQZ8ZQz3U+h5KXr5Ya52qNfWHvGbGsDPX+h5KXr5Ya52qNXWGfMk9J0kqSJ0h\nX3LPaTdd9abGcLAbw3tYVEKZx1an2kidId+1tkO5zedbfK7aDna7GcN7WFRCiI6tTrWR+lfXdNVD\nLlXJZZNUnPp78iX0nHbT9ylzqfVwEGN4D6WxTiev/pBfx27DJ22HcpunzE3KNoadeQzvoTTW6eQZ\n8qeVPI5ZctkkFa3+Mfka2JuSNJDp9OQPMhzTdii3+XweMCQdQGRmfy8WkX2+3p62tx3ykFSNiCAz\nY53/63CNpINzKW81phnyp4c8bKjSetx3qmHIS+qP+1zvpjPxKmkzbVxL4l0xeze9kPfmTdJ6vF6j\nStMLeRuq1C87VoOaXshL2txBwtmO1cG0PKQ1zYnX0+xFaAq6mOx03+lOy5+XIS8Npc2deb/nKmlF\ni/tc7xoN10TEIeA6ZgeFGzPz2l222QLeDTwR+I/MfGWL5ZTGp6s/JlOyGso4hA7nLVaGfEScBVwP\nXAo8AByPiA9n5smFbZ4J/B7w45l5KiLO2ahUkjbjZGddOpy3aNKTvxi4KzPvBYiIo8DlwMmFba4E\nPpSZpwAy8+HWSiiNSZvhu+q5nOwUzUL+XOC+hcf3Mwv+RRcAT4yIY8DTgPdk5h+3U0RpRNoM35qD\nvJbhpSG0XC9tTbyeDVwEXAYcAt4eES9o6bklbaLEMC1pMrg0LX9eTXryp4DzFh4/Z/6zRfcDD2fm\nN4BvRMTfAi8F7l5+su2F3sbW1hZbi/eRKbExSl3p6+8MuF9VZ2dnh52WDoQr7ycfEU8AvsBs4vVB\n4LPAFZl5YmGbFwO/y6wX/2Tg74E3ZOa/Lj3X3veT9x7v0rgtzyEcPjz73snglTa5n/zKnnxmPhYR\n1wC3cmYJ5YmIuHr26zySmScj4m+AO4HHgCPLAa8J8yxNcCbMTwe9nbpeNFonn5kfA1609LP3Lz3+\nbeC3D/TqLvOaBkNeixyP79Ww966peXWApPV50O+NNyhTNzxL06Ld2sPpMzzbQ6fKCXk/6HHxLE2L\nxtoeKhiKLOcGZYVXlCR9mwrmF8oJeY2XB3Atsj30qpzhGo2XO7UWtd0e+h4yqWy+yZCXVLe+Q76y\n+QWHayRpxOzJS6pPKUMmBQ7PLFt575pWX2y/e9dI0jomcN+rTe5d43CNJI2YIS+pbhUMmQzJ4RpJ\nKpzDNZKkXRnyUlMVXMIuLTPkpaYMeVXIkJekTRR+8PdiKGk/pVx007UKbplbrMLrzpCX9lPZfUrW\nVnhQaX2GvCQdVBdneB0daIcPeXsQqsXY2ulUhqK60MUZniEvDWxs7XQqQ1ETN3zIS1LNNjn493A2\nNUzIe5oolcX9bn2b1F0PZ1PDhLyniVJZDPnR8mIoSe0o/KKg4nV0oB0+5O1BSHXZK8wN+c0Y8pKK\nsFeY33NPn6VQQ9NYXeMyTakbi4so/vAP4Xu/d/a9iyiKYchLbRlzO9tvRdzphRM7Oy6iKNA0Ql7q\nw5hDfq8VcYvBftttZ75v2pMfY50V9p7GG/KuxZe6t7g/3XPPwXvyhQViKwp7T+MNedfiqw9T7Ezs\n9b5Oj8erKOMN+T4VduRWj6bYmdirrTfdB8Z4YCz4PU0j5LuuZENear4PjPHAWPB7Gn6dfB8MYPXB\ndqYCNerJR8Qh4DpmB4UbM/PaPbb7YeDTwBsy8y9aK2WJCj4900D83A9ujHVW2HuKzNx/g4izgH8D\nLgUeAI4Db8zMk7ts93Hgf4E/2C3kIyJXvV6VtreLOj2TNC4RQWbGOv+3yXDNxcBdmXlvZj4KHAUu\n32W7Xwb+HPj3dQoiSWpfk5A/F7hv4fH98589LiK+B3htZr4PWOtoU7XCTs8k6bS2Jl6vA9668Hha\nQW/ISypUk4nXU8B5C4+fM//Zoh8CjkZEAOcAl0XEo5l5y/KTbS+MXW9tbbFlQErSt9jZ2WGnpVs3\nN5l4fQLwBWYTrw8CnwWuyMwTe2x/E/CRSU28SlKHNpl4XdmTz8zHIuIa4FbOLKE8ERFXz36dR5b/\nyzoFkSS1b2VPvtUXsycvbc4rrCen6yWUkkrin9nTARjy0m4MUo3ENG5QJh1UaUMi3kZDazLkVY/S\ngrdPBd/lUGUz5FWPrkPe3rJGyJBXf0rvidfSWy65DlUcQ179WSfk7V1/u6m+b63FkFfZhupdG6Qa\nCUNe3aq1J15C2Uof3lIVDPlNuBOu1mZPfGp1bftSC8Z5MVRfF7J4wUy/DDzpwMbZk7cHVCY/k9Vq\nHd5SscYZ8l1yJ1yf9bNaLcs4VY3xhHxf4etOKKki4wl5w1dj45mPWlDXxGtpE53uhOqS7UstGGfI\n97VzuBOqBqV1jtSrukK+qf3C1wavqbHNT1r5Y/JtT6i6vFLShJQf8k6o9scD4Hi41Fdz5Yd8G2pp\n8EOHbFuvP/T70PQ6R7a5PdUV8ut+iLU0+LE01LG8D9XDNrenaYS89lbLWY7W5+c4aXWFfBtKa/BD\nh2xbZzlDvw/tbaz1b5trxJAfWi1DSauM5X2oHra5Rsa5Tl7rKe0AKGljhnxJhg7Ztl5/6Peh6bHN\n7Skys78Xi8g+X08FchWEdGARQWbGOv/Xnrz65SX2WsU20ipDXlJZDPlWTW91jfrnUjdpMIa8uudS\nN61iR6Azhryk4TXpCDhpvxbH5NUvd1Kty7H6tRjy6pchr1VsI61yuEZSWRZD3rH6jTUK+Yg4BFzH\nrOd/Y2Zeu/T7K4G3zh9+DfiFzPznNguqSjmOqk04ab+xlcM1EXEWcD3wGuAlwBUR8eKlzb4E/Fhm\nvhR4J/D7bRdUlXIcVWNXeBtvMiZ/MXBXZt6bmY8CR4HLFzfIzNsz87/nD28Hzm23mJImr9QzwsJD\nvslwzbnAfQuP72cW/Hv5OeCjmxRKlXMcVV2w7ayl1YnXiHglcBXw8r222V4YU9va2mLLD258HEfV\n2HXckdnZ2WGnpTOElXehjIhLgO3MPDR//DYgd5l8vRD4EHAoM7+4x3N5F8qp2d425JtwgrpePbTx\nru9CeRx4QUScHxFPAt4I3LJUgPOYBfyb9gp4TVSpwVXaOGpp5dHeKvusVoZ8Zj4GXAPcCnweOJqZ\nJyLi6oj4+flmbweeDbw3Ij4XEZ/trMSqiyGvsVluO6W28blGY/KZ+THgRUs/e//C928B3tJu0aSR\nc4J6HAr/rLziVdNRWqg6Qb2+NucwmjxXaW3nAAx5TYehOh59h3zFbccblEklKLw3qHrZk1e5ulxW\nWFqollaeErU5ZLLJc1X2WRnyKteUQl6rtTlksslzVdZ2HK6RpBGzJ6+yVLyKQT1qsy2U3q42vKbD\nkFdZKl7FcGDeymB9tYX8Jp/1hiHvcI3Ut9M7rVfdTseAn7U9eZVrrL1ce/BaZa9hyzUY8irXGIPw\n9M67ve2cw9C6PthuukxzcZsNgt6Ql/qwuMPfdttsB37FKwz3IXUd8oXMLxnyUh922+G3tw14rba1\nZU9eqpIB37+hluhu8twblmvlX4Zqk38ZSsKJ11JU9FfLuv7LUJLaZMCrR4a81CfXxpdjIgdbQ17q\nkyFfDkNeklQ7V9dIXfOmaxqQIS91rZCLYjRNDtdI0m5GMn9iyEt9cnimHoa8pAMz5NUzx+S74lWN\nUn1GOEluyHfFkJfqM8JJcodrajOScUKNmG20KPbk29THqZ5nCCpdyW30IGUr9T0ckCHfphGe6lWn\n5IBZ1xjf01AMeRVphJNBnRljINbwnmyjxTLku9Jmw/YMQaUruY1O/ABkyHdlAo2nGGPcicf4noZS\n8gGoB9MK+RpOe1epvfxdGONOXPN7so0WZVpLKMewtMsdSKUruY2WXLaOTCvkNX5j3InH+J6GMsG6\nbDRcExGHgOuYHRRuzMxrd9nmPcBlwNeBn83MO9os6Noc25yWMX6mY3xP6s3KkI+Is4DrgUuBB4Dj\nEfHhzDy5sM1lwPMz84UR8SPADcAlHZX5YAod29zZ2WHLnRewLhZZF2dYF+1oMlxzMXBXZt6bmY8C\nR4HLl7a5HPgjgMz8e+CZEfFdrZZ0ZHbGMD/QEuviDOviDOuiHU1C/lzgvoXH989/tt82p3bZZnj2\nCiRNzLQmXg15SRMTmbn/BhGXANuZeWj++G1ALk6+RsQNwLHMvHn++CTwisx8aOm59n8xSdKuMjPW\n+X9NVtccB14QEecDDwJvBK5Y2uYW4JeAm+cHhf9aDvhNCilJWs/KkM/MxyLiGuBWziyhPBERV89+\nnUcy868j4ici4m5mSyiv6rbYkqQmVg7XSJLq1cnEa0QcioiTEfFvEfHWPbZ5T0TcFRF3RMTLuihH\nCVbVRURcGRH/NP/6VET84BDl7EOTdjHf7ocj4tGIeF2f5etTw31kKyI+FxH/EhHH+i5jXxrsI8+I\niFvmWfHPEfGzAxSzcxFxY0Q8FBF37rPNwXMzM1v9YnbguBs4H3gicAfw4qVtLgP+av79jwC3t12O\nEr4a1sUlwDPn3x+acl0sbPcJ4C+B1w1d7gHbxTOBzwPnzh+fM3S5B6yL3wTedboegK8CZw9d9g7q\n4uXAy4A79/j9WrnZRU/ei6fOWFkXmXl7Zv73/OHtlHh9QTuatAuAXwb+HPj3PgvXsyZ1cSXwocw8\nBZCZD/dcxr40qYsEnj7//unAVzPzmz2WsReZ+SngkX02WSs3uwj58Vw8tbkmdbHo54CPdlqi4ays\ni4j4HuC1mfk+YMwrsZq0iwuAZ0fEsYg4HhFv6q10/WpSF9cDPxARDwD/BPxqT2UrzVq5Oa37yRcs\nIl7JbFXSy4cuy4CuAxbHZMcc9KucDVwEvAp4KvCZiPhMZt49bLEG8Rrgc5n5qoh4PvDxiLgwM/9n\n6ILVoIuQPwWct/D4OfOfLW/z3BXbjEGTuiAiLgSOAIcyc7/TtZo1qYsfAo5GRDAbe70sIh7NzFt6\nKmNfmtTF/cDDmfkN4BsR8bfAS5mNX49Jk7q4CngXQGZ+MSK+DLwY+IdeSliOtXKzi+Gaxy+eiogn\nMbt4anknvQX4aXj8itpdL54agZV1ERHnAR8C3pSZXxygjH1ZWReZ+bz51/cxG5f/xREGPDTbRz4M\nvDwinhART2E20Xai53L2oUld3Au8GmA+Bn0B8KVeS9mfYO8z2LVys/WefHrx1OOa1AXwduDZwHvn\nPdhHM/Pi4UrdjYZ18S3/pfdC9qThPnIyIv4GuBN4DDiSmf86YLE70bBdvBP4wMLSwt/IzP8cqMid\niYg/BbaA74yIrwCHgSexYW56MZQkjdi07kIpSRNjyEvSiBnykjRihrwkjZghL0kdaXLTsYVtnxsR\nn4yIf5zfgOyyNspgyEtSd25idsVuE78F3JyZFzH7w0zvbaMAhrwkdWS3m45FxPMi4qPzexLdFhEX\nzH/1f8Az5t8/i5buAuC9aySpX0eAq+e3aLgYeB9wKfAO4NaI+BXgKcyv8t2UIS9JPYmIpwI/CvzZ\n/Ap3mN1HH2ZDNDdl5rvnty34IPCSTV/TkJek/pwFPDIfd1/2Zubj95l5e0R8R0Scs+nfEnBMXpK6\n9fhNxzLza8CXI+L1j/9ydhda+NYbsX0/8OQ2/liM966RpI4s3nQMeIjZTcc+CdwAfDez0ZSjmfnO\nebD/PvA0ZpOwv56Zn9i4DIa8JI2XwzWSNGKGvCSNmCEvSSNmyEvSiBnykjRihrwkjZghL0kjZshL\n0oj9P40OCvf5mu9CAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x79abbe0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%matplotlib inline\n",
+    "\n",
+    "import matplotlib\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import scipy\n",
+    "xrand = []\n",
+    "yrand = []\n",
+    "for i in range (0,100):\n",
+    "    xrand.append(vonNeumannRand(seed))\n",
+    "    yrand.append(vonNeumannRand(xrand[i]))\n",
+    "    seed = yrand[i]\n",
+    "\n",
+    "plt.plot(xrand, yrand, 'r+')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
