--- a/Lecture 5.ipynb
+++ b/Lecture 5.ipynb
@@ -23,6 +23,18 @@
     }
    },
    "source": [
+    "## Data mining, the original meaning\n",
+    "<img src=\"https://imgs.xkcd.com/comics/significant.png\" width=\"250\" height=\"250\" />\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "## Thoughts on the need for data-mining\n",
     "\n",
     "*\"Drowning in Data yet Starving for Knowledge\"* - unknown \n",
@@ -87,7 +99,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "## The Component Fields of data mining\n",
     "\n",
@@ -100,7 +116,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "## Stages of data mining\n",
     "* <s>Denial</s> Data gathering (data warehousing, web crawling, semi-legal metadata collection)\n",
