--- a/Lecture5.ipynb
+++ b/Lecture5.ipynb
@@ -1329,6 +1329,246 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Stand in"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Neural Networks\n",
+    "The idea for artificial neural networks as classifiers stems from attempts to simulate biological neural systems where neurons are linked together via axons which are used to transmit nerve impulses from one neuron to another. Neurons are connect to axons of other neurons via dendrites. The connection between a dendrite and an axon is called a synapse, and we learn by changing the strength of this connect. \n",
+    "<img src=\"http://i.imgur.com/Zz5g7o9.png\" width=\"600\" height=\"600\" />\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Neural Network Notes\n",
+    "\n",
+    "Neural networks hae become very popular of late; now solving problems in finance, medicine, engineering, geology and physics. \n",
+    "\n",
+    "Can be used where problems involve prediction, classification, or control. \n",
+    "\n",
+    "Neural networks are very sophisticated modeling techniques capable of modeling complex functions. In particular, neural networks can be nonlinear. Neural networks also keep in check the “curse of dimensionality”.\n",
+    "\n",
+    "Neural Networks learn by example; the network user gathers representative data, and then invokes training algorithms to automatically learn the structure of the data; as in all things, the user must know what hes is doing in setting up the network and preparing the data, but after this step, the network more or less trains itself. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Novel Napplications of Neural Networks\n",
+    "* If one monitors a variety of health related indices (heart rate, blood pressure, blood lipid levels, respiration rate), the onset of a particlar medical condition can be associated with a comlex nonlinear combination to a subset of these traits before pathological symptoms appears. Neural Networks are ideal for this task. \n",
+    "\n",
+    "* Stock price fluctations can appear more or less to be random, but a wide variety of factors (Brexit, natural disasters, manmade disasters (Brexit), price of seemingly unrelated goods). Neural networks can be trained to take these into account using historical data. \n",
+    "\n",
+    "* Used in assignment of credit to base loan approval on a wide variety of factors that may not be immediatly apparent. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Building an artificial Neuron\n",
+    "We're trying to capture the behaivor of a biological neuron, so we construct an artificial neuron as having: \n",
+    "\n",
+    "* A number of inputs (either from original data, or from the output of other neurons in the network)\n",
+    "* Each input comes via a connection that has a strength (weight). These connections correspond to the synapse of the biological neuron. \n",
+    "* If input into a neuron via these inputs reaches some threshold (determinned by the strength of the connections), the neuron activates or 'fires'. \n",
+    "* The activation signal is passed through an activation function to produce an output. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Connecting Neurons\n",
+    "\n",
+    "If a neuron is to be useful, there must be inputs (independent variables of interest) and outputs (our dependent quantity / prediction). Inputs correspond to sensory nerves (eyes, ears, telepathy receptors). \n",
+    "\n",
+    "Simple networks on propogate information forward, from a sensory input, to the first \"hidden\" layer of neurons, to any subsequent hidden layers, and then to the output layer. \n",
+    "\n",
+    "<img src=\"http://i.imgur.com/pKoTFCb.png\" width=\"600\" height=\"600\" />\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Simple Multilayer Network Example\n",
+    "\n",
+    "First we need to discuss what makes a neuron fire; neurons fire based on a firing rule, which takes inputs and determines if that combination of inputs triggers a neuron activation. \n",
+    "\n",
+    "To do this, you give the neuron a training set; a variety of input combinations in which you tell it specifically whether or not it should fire. \n",
+    "\n",
+    "The neuron then learns from this training set when to fire for comibinations of inputs different from those in the training set by comparing the new comibination of inputs to those in it's training set; if the new inputs are closer to a 'fire' comibination, it fires. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Simple Multilayer Network Example\n",
+    "We consider a single neuron which takes input from three sensory nodes. We give it the following training set of data. \n",
+    "\n",
+    "| S1  | S2  | S3   | N|\n",
+    "|:----------|:---------:| :---------:|------:|\n",
+    "|0|0|0|0|\n",
+    "|0|0|1|0|\n",
+    "|1|0|1|1|\n",
+    "|1|1|1|1|\n",
+    "\n",
+    "For the first two cases, it does not fire, but for the second two it does. From this, we must decide whether or not the neuron should fire base on any possible comibination of inputs. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Single Multilayer Network Example\n",
+    "\n",
+    "| S1  | S2  | S3   | N|\n",
+    "|:----------|:---------:| :---------:|------:|\n",
+    "|**0**|**0**|**0**|**0**|\n",
+    "|**0**|**0**|**1**|**0**|\n",
+    "|0|1|0|?|\n",
+    "|0|1|1|?|\n",
+    "|1|0|0|?|\n",
+    "|**1**|**0**|**1**|**1**|\n",
+    "|1|1|0|?|\n",
+    "|**1**|**1**|**1**|**1**|\n",
+    "\n",
+    "Our firing rule will be; the neuron will fire if the input is closer (shares more in common with) a 'fire' set of inputs from the training set than with a 'don't fire' set of inputs. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Multi-Nodal Network Example\n",
+    "\n",
+    "Consider the following neural network. We train it to recognize letters on pixelated domain. \n",
+    "<img src=\"http://i.imgur.com/OW6Tbut.png\" width=\"600\" height=\"600\" />\n",
+    "\n",
+    "\n",
+    "We'll train it on perfect data, to tell the difference between a T and an H, and then try it on some corrupted data. \n",
+    "\n",
+    "<img src=\"http://i.imgur.com/Wr8rakA.png\" width=\"600\" height=\"200\" />\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Multi-nodal Network Example\n",
+    "\n",
+    "<img src=\"http://i.imgur.com/oFc0XZN.png\" width=\"600\" height=\"600\" />\n",
+    "\n",
+    "This example registers as a T, as its Top neuron is 1 off from a T, and the middle and bottom neurons are 0 off. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Multi-nodal Network Example\n",
+    "\n",
+    "<img src=\"http://i.imgur.com/Gmb2fBJ.png\" width=\"600\" height=\"600\" />\n",
+    "\n",
+    "For similar reasons, this one registers as an H."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Multi-nodal Network Example\n",
+    "\n",
+    "<img src=\"http://i.imgur.com/43Vz2S5.png\" width=\"600\" height=\"600\" />\n",
+    "\n",
+    "This one may require special handling owing to the middle layer being as close to T as it is to H. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Midterm Exam\n",
+    "\n",
+    "Goes live 7/1/2016. \n",
+    "\n",
+    "Is due on the 12th. \n",
+    "\n",
+    "5 questions/tasks covering all the sections we have covered thusfar. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
